[package]
name = "pomoru"
version = "1.0.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
owo-colors = "4.2.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console"
] }
